# DispatchCpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
platform/linux/: Platform_lin.cpp  Platform_lin.h
platform/mac/: Platform_mac.h  Platform_mac.mm  SMCWrapper.m
platform/win32/: Platform_win.cpp  Platform_win.h
src/: Dispatch.cpp  Dispatch.hpp  DispatchPrivate.cpp  DispatchPrivate.hpp  DispatchQueue.cpp  DispatchQueue.hpp  DispatchThread.cpp  DispatchThread.hpp  Thread.cpp  Thread.h  main.cpp
src/platform/: Platform.cpp  Platform.h
src/platform/mac/: SMCWrapper.h  smc.h
